Necessary comment line edits and sidebar language synchronization have been completed.

--- a/DiarizeAI-Mobil/src/services/locales/ar.json
+++ b/DiarizeAI-Mobil/src/services/locales/ar.json
@@ -60,5 +60,7 @@
   "topic_sensitive": "التركيز على الموضوع",
   "topic_hint": "الكلمات الرئيسية للتركيز (مثال: امتحان)",
   "topic_placeholder": "مثال: الامتحان النهائي، المشروع...",
-  "original": "أصلي"
+  "original": "أصلي",
+  "Summarized": "ملخصات"
+  
 }
