--- a/DiarizeAI-Mobil/src/services/locales/az.json
+++ b/DiarizeAI-Mobil/src/services/locales/az.json
@@ -60,5 +60,6 @@
   "topic_sensitive": "Mövzu Həssaslığı",
   "topic_hint": "Diqqət ediləcək açar sözlər (məs. İmtahan)",
   "topic_placeholder": "məs. Yekun İmtahan, Layihə...",
-  "original": "Orijinal"
+  "original": "Orijinal",
+  "Summarized": "Xülasələr"
 }
