--- a/DiarizeAI-Mobil/src/services/locales/de.json
+++ b/DiarizeAI-Mobil/src/services/locales/de.json
@@ -60,5 +60,6 @@
   "topic_sensitive": "Themenfokus",
   "topic_hint": "Schlüsselwörter (z.B. Prüfung, Frist)",
   "topic_placeholder": "z.B. Abschlussprüfung, Projekt...",
-  "original": "Original"
+  "original": "Original",
+  "Summarized": "Zusammenfassungen"
 }
