--- a/DiarizeAI-Mobil/src/services/locales/es.json
+++ b/DiarizeAI-Mobil/src/services/locales/es.json
@@ -60,5 +60,6 @@
   "topic_sensitive": "Enfoque del tema",
   "topic_hint": "Palabras clave (ej: Examen)",
   "topic_placeholder": "ej: Examen final, Proyecto...",
-  "original": "Original"
+  "original": "Original",
+  "Summarized": "Resúmenes"
 }
