--- a/DiarizeAI-Mobil/src/services/locales/fa.json
+++ b/DiarizeAI-Mobil/src/services/locales/fa.json
@@ -60,5 +60,6 @@
   "topic_sensitive": "تمرکز بر موضوع",
   "topic_hint": "کلمات کلیدی برای تمرکز (مانند امتحان)",
   "topic_placeholder": "مانند: امتحان نهایی، پروژه...",
-  "original": "اصلی"
+  "original": "اصلی",
+  "Summarized": "خلاصه‌ها"
 }
