--- a/DiarizeAI-Mobil/src/services/locales/hi.json
+++ b/DiarizeAI-Mobil/src/services/locales/hi.json
@@ -60,5 +60,6 @@
   "topic_sensitive": "विषय फोकस",
   "topic_hint": "फोकस कीवर्ड (उदा: परीक्षा)",
   "topic_placeholder": "उदा: अंतिम परीक्षा, परियोजना...",
-  "original": "मूल"
+  "original": "मूल",
+  "Summarized": "सारांश"
 }
