--- a/DiarizeAI-Mobil/src/services/locales/id.json
+++ b/DiarizeAI-Mobil/src/services/locales/id.json
@@ -60,5 +60,6 @@
   "topic_sensitive": "Fokus Topik",
   "topic_hint": "Kata kunci fokus (mis: Ujian)",
   "topic_placeholder": "mis: Ujian Akhir, Proyek...",
-  "original": "Asli"
+  "original": "Asli",
+  "Summarized": "Ringkasan"
 }
