--- a/DiarizeAI-Mobil/src/services/locales/pl.json
+++ b/DiarizeAI-Mobil/src/services/locales/pl.json
@@ -60,5 +60,6 @@
   "topic_sensitive": "Fokus Tematyczny",
   "topic_hint": "Słowa kluczowe (np. Egzamin)",
   "topic_placeholder": "np. Egzamin Końcowy, Projekt...",
-  "original": "Oryginał"
+  "original": "Oryginał",
+  "Summarized": "Summarized"
 }
