--- a/DiarizeAI-Mobil/src/services/locales/ru.json
+++ b/DiarizeAI-Mobil/src/services/locales/ru.json
@@ -60,5 +60,6 @@
   "topic_sensitive": "Фокус темы",
   "topic_hint": "Ключевые слова (например: Экзамен)",
   "topic_placeholder": "напр.: Финальный экзамен, Проект...",
-  "original": "Оригинал"
+  "original": "Оригинал",
+  "Summarized": "Summarized"
 }
