--- a/DiarizeAI-Mobil/src/services/locales/zh.json
+++ b/DiarizeAI-Mobil/src/services/locales/zh.json
@@ -60,5 +60,6 @@
   "topic_sensitive": "主题焦点",
   "topic_hint": "关注的关键词（例如：考试）",
   "topic_placeholder": "例如：期末考试，项目...",
-  "original": "原件"
+  "original": "原件",
+  "Summarized": "Summarized"
 }
