Application interface language update

--- a/DiarizeAI-Mobil/src/services/locales/ko.json
+++ b/DiarizeAI-Mobil/src/services/locales/ko.json
@@ -61,5 +61,5 @@
   "topic_hint": "초점 키워드 (예: 시험)",
   "topic_placeholder": "예: 기말고사, 프로젝트...",
   "original": "원본",
-  "Summarized": "Summarized"
+  "Summarized": "요약됨"
 }
