--- a/DiarizeAI-Mobil/src/services/locales/pl.json
+++ b/DiarizeAI-Mobil/src/services/locales/pl.json
@@ -61,5 +61,5 @@
   "topic_hint": "Słowa kluczowe (np. Egzamin)",
   "topic_placeholder": "np. Egzamin Końcowy, Projekt...",
   "original": "Oryginał",
-  "Summarized": "Summarized"
+  "Summarized": "Podsumowane"
 }
