--- a/DiarizeAI-Mobil/src/services/locales/pt.json
+++ b/DiarizeAI-Mobil/src/services/locales/pt.json
@@ -61,5 +61,5 @@
   "topic_hint": "Palavras-chave (ex: Exame)",
   "topic_placeholder": "ex: Exame Final, Projeto...",
   "original": "Original",
-  "Summarized": "Summarized"
+  "Summarized": "Resumido"
 }
