--- a/DiarizeAI-Mobil/src/services/locales/ru.json
+++ b/DiarizeAI-Mobil/src/services/locales/ru.json
@@ -61,5 +61,5 @@
   "topic_hint": "Ключевые слова (например: Экзамен)",
   "topic_placeholder": "напр.: Финальный экзамен, Проект...",
   "original": "Оригинал",
-  "Summarized": "Summarized"
+  "Summarized": "Резюмировано"
 }
