--- a/DiarizeAI-Mobil/src/services/locales/zh.json
+++ b/DiarizeAI-Mobil/src/services/locales/zh.json
@@ -61,5 +61,5 @@
   "topic_hint": "关注的关键词（例如：考试）",
   "topic_placeholder": "例如：期末考试，项目...",
   "original": "原件",
-  "Summarized": "Summarized"
+  "Summarized": "已总结"
 }
