FEAT: Refined Keyword Highlighting with Markdown Support & Smart Toggle
Summary:

Fixed the issue where AI bold markers (**text**) were displayed literally. Replaced raw text with a premium Amber highlighting style and added a user-controlled toggle.

Changes in ResultScreen.js:

- Fixed Markdown Parsing: Implemented a splitter logic to detect and style '**word**' patterns, removing visible asterisks.

- Visual Upgrade: Switched highlight color to a transparent Premium Amber (Gold) for better Dark Mode aesthetics.

- Added Smart Toggle: Users can now toggle highlights on/off. The button automatically disables/dims if no keywords exist in the analysis.

- UI Polish: Added smooth LayoutAnimation for toggling states.

--- a/DiarizeAI-Mobil/src/services/locales/tr.json
+++ b/DiarizeAI-Mobil/src/services/locales/tr.json
@@ -61,5 +61,8 @@
   "topic_hint": "Dikkat edilecek kelimeler (örn: Vize, Final)",
   "topic_placeholder": "Örn: Final Sınavı, Proje...",
   "original": "Orijinal",
-  "Summarized": "Özetlenenler"
+  "Summarized": "Özetlenenler",
+  
+  "hide_highlights": "Önemlileri Gizle",
+  "show_highlights": "Önemlileri Göster"
 }
