--- a/DiarizeAI-Mobil/src/services/locales/az.json
+++ b/DiarizeAI-Mobil/src/services/locales/az.json
@@ -61,5 +61,30 @@
   "topic_hint": "Diqqət ediləcək açar sözlər (məs. İmtahan)",
   "topic_placeholder": "məs. Yekun İmtahan, Layihə...",
   "original": "Orijinal",
-  "Summarized": "Xülasələr"
+  "Summarized": "Xülasələr",
+
+  "hide_highlights": "Əsas məqamları gizlət",
+  "show_highlights": "Əsas məqamları göstər",
+  "analysis_karaoke_title": "Təhlil və Karaoke",
+  "data_not_found": "Məlumat tapılmadı.",
+  "go_back": "Geri qayıt",
+  "audio_mode_earpiece": "Qulaqlıq rejimi",
+  "audio_mode_speaker": "Dinamik",
+  "error_audio_missing": "Səs Faylı Tapılmadı",
+  "btn_relink_file": "Faylı Yenidən Yüklə",
+  "label_summary": "Xülasə",
+  "no_summary_available": "Xülasə tapılmadı.",
+  "label_type": "Növ",
+  "unknown": "Naməlum",
+  "label_language": "Dil",
+  "label_keypoints": "Əsas məqamlar",
+  "label_transcript": "Canlı Transkript",
+  "speaker_default": "Dinamik",
+  "no_text_available": "Mətn yoxdur əlçatandır.",
+  "alert_warning": "Xəbərdarlıq",
+  "alert_duration_mismatch": "Vaxt uyğunsuzluğu, lakin hələ də davam edir.",
+  "alert_file_relinked": "Fayl bərpa edildi!",
+  "alert_delete_confirm": "Təhlili silmək istədiyinizə əminsinizmi?",
+  "cancell": "Ləğv et",
+  "delete": "Sil"
 }
