--- a/DiarizeAI-Mobil/src/services/locales/es.json
+++ b/DiarizeAI-Mobil/src/services/locales/es.json
@@ -61,5 +61,30 @@
   "topic_hint": "Palabras clave (ej: Examen)",
   "topic_placeholder": "ej: Examen final, Proyecto...",
   "original": "Original",
-  "Summarized": "Resúmenes"
+  "Summarized": "Resúmenes",
+
+  "hide_highlights": "Ocultar destacados",
+  "show_highlights": "Mostrar destacados",
+  "analysis_karaoke_title": "Análisis y karaoke",
+  "data_not_found": "Datos no encontrados",
+  "go_back": "Volver",
+  "audio_mode_earpiece": "Modo auricular",
+  "audio_mode_speaker": "Altavoz",
+  "error_audio_missing": "Archivo de audio no encontrado",
+  "btn_relink_file": "Recargar archivo",
+  "label_summary": "Resumen",
+  "no_summary_available": "Resumen no encontrado",
+  "label_type": "Tipo",
+  "unknown": "Desconocido",
+  "label_language": "Idioma",
+  "label_keypoints": "Puntos clave",
+  "label_transcript": "Transcripción en directo",
+  "speaker_default": "Orador",
+  "no_text_available": "No hay texto disponible.",
+  "alert_warning": "Advertencia",
+  "alert_duration_mismatch": "Desfase de tiempo, pero continúa.",
+  "alert_file_relinked": "¡Archivo restaurado!",
+  "alert_delete_confirm": "¿Seguro que desea eliminar el análisis?",
+  "cancel": "Cancelar",
+  "delete": "Eliminar"
 }
