--- a/DiarizeAI-Mobil/src/services/locales/fa.json
+++ b/DiarizeAI-Mobil/src/services/locales/fa.json
@@ -61,5 +61,30 @@
   "topic_hint": "کلمات کلیدی برای تمرکز (مانند امتحان)",
   "topic_placeholder": "مانند: امتحان نهایی، پروژه...",
   "original": "اصلی",
-  "Summarized": "خلاصه‌ها"
+  "Summarized": "خلاصه‌ها",
+
+  "hide_highlights": "پنهان کردن نکات برجسته",
+  "show_highlights": "نمایش نکات برجسته",
+  "analysis_karaoke_title": "تحلیل و کارائوکه",
+  "data_not_found": "داده‌ای یافت نشد.",
+  "go_back": "برگشت",
+  "audio_mode_earpiece": "حالت گوشی",
+  "audio_mode_speaker": "بلندگو",
+  "error_audio_missing": "فایل صوتی یافت نشد",
+  "btn_relink_file": "بارگیری مجدد فایل",
+  "label_summary": "خلاصه",
+  "no_summary_available": "خلاصه یافت نشد.",
+  "label_type": "نوع",
+  "unknown": "نامشخص",
+  "label_language": "زبان",
+  "label_keypoints": "نکات کلیدی",
+  "label_transcript": "متن زنده",
+  "speaker_default": "گوینده",
+  "no_text_available": "متنی موجود نیست.",
+  "alert_warning": "هشدار",
+  "alert_duration_mismatch": "عدم تطابق زمانی، اما همچنان ادامه دارد.",
+  "alert_file_relinked": "فایل بازیابی شد!",
+  "alert_delete_confirm": "آیا مطمئن هستید که می‌خواهید تحلیل را حذف کنید؟",
+  "cancel": "لغو",
+  "delete": "حذف"
 }
