--- a/DiarizeAI-Mobil/src/services/locales/fr.json
+++ b/DiarizeAI-Mobil/src/services/locales/fr.json
@@ -61,5 +61,30 @@
   "topic_hint": "Mots-clés à cibler (ex : Examen)",
   "topic_placeholder": "ex : Examen final, Projet...",
   "original": "Original",
-  "Summarized": "Résumés"
+  "Summarized": "Résumés",
+
+  "hide_highlights": "Masquer les temps forts",
+  "show_highlights": "Afficher les temps forts",
+  "analysis_karaoke_title": "Analyse et karaoké",
+  "data_not_found": "Données introuvables.",
+  "go_back": "Retour",
+  "audio_mode_earpiece": "Mode oreillette",
+  "audio_mode_speaker": "Haut-parleur",
+  "error_audio_missing": "Fichier audio introuvable",
+  "btn_relink_file": "Recharger le fichier",
+  "label_summary": "Résumé",
+  "no_summary_available": "Résumé introuvable.",
+  "label_type": "Type",
+  "unknown": "Inconnu",
+  "label_language": "Langue",
+  "label_keypoints": "Points clés",
+  "label_transcript": "Transcription en direct",
+  "speaker_default": "Haut-parleur",
+  "no_text_available": "Aucun texte disponible.",
+  "alert_warning": "Avertissement",
+  "alert_duration_mismatch": "Durée incohérente, mais l'analyse se poursuit.",
+  "alert_file_relinked": "Fichier restauré !",
+  "alert_delete_confirm": "Êtes-vous sûr de vouloir supprimer l'analyse ?",
+  "cancel": "Annuler",
+  "delete": "Supprimer"
 }
