--- a/DiarizeAI-Mobil/src/services/locales/id.json
+++ b/DiarizeAI-Mobil/src/services/locales/id.json
@@ -61,5 +61,30 @@
   "topic_hint": "Kata kunci fokus (mis: Ujian)",
   "topic_placeholder": "mis: Ujian Akhir, Proyek...",
   "original": "Asli",
-  "Summarized": "Ringkasan"
+  "Summarized": "Ringkasan",
+
+  "hide_highlights": "Sembunyikan Sorotan",
+  "show_highlights": "Tampilkan Sorotan",
+  "analysis_karaoke_title": "Analisis & Karaoke",
+  "data_not_found": "Data tidak ditemukan.",
+  "go_back": "Kembali",
+  "audio_mode_earpiece": "Mode Earpiece",
+  "audio_mode_speaker": "Speaker",
+  "error_audio_missing": "File Audio Tidak Ditemukan",
+  "btn_relink_file": "Muat Ulang File",
+  "label_summary": "Ringkasan",
+  "no_summary_available": "Ringkasan tidak ditemukan.",
+  "label_type": "Tipe",
+  "unknown": "Tidak Diketahui",
+  "label_language": "Bahasa",
+  "label_keypoints": "Poin Penting",
+  "label_transcript": "Transkrip Langsung",
+  "speaker_default": "Pembicara",
+  "tidak_ada_teks_tersedia": "Tidak ada teks yang tersedia.",
+  "peringatan_peringatan": "Peringatan",
+  "peringatan_durasi_tidak_sesuai": "Waktu tidak sesuai, tetapi tetap berlanjut.",
+  "peringatan_file_ditautkan_kembali": "File dipulihkan!",
+  "peringatan_konfirmasi_hapus": "Apakah Anda yakin ingin menghapus analisis?",
+  "batal": "Batal",
+  "hapus": "Hapus"
 }
