--- a/DiarizeAI-Mobil/src/services/locales/it.json
+++ b/DiarizeAI-Mobil/src/services/locales/it.json
@@ -61,5 +61,30 @@
   "topic_hint": "Parole chiave (es: Esame)",
   "topic_placeholder": "es: Esame finale, Progetto...",
   "original": "Originale",
-  "Summarized": "Riassunti"
+  "Summarized": "Riassunti",
+  
+  "hide_highlights": "Nascondi Highlights",
+  "show_highlights": "Mostra Highlights",
+  "analysis_karaoke_title": "Analisi e Karaoke",
+  "data_not_found": "Dati non trovati.",
+  "go_back": "Torna indietro",
+  "audio_mode_earpiece": "Modalità Auricolare",
+  "audio_mode_speaker": "Altoparlante",
+  "error_audio_missing": "File audio non trovato",
+  "btn_relink_file": "Ricarica file",
+  "label_summary": "Riepilogo",
+  "no_summary_available": "Riepilogo non trovato.",
+  "label_type": "Tipo",
+  "unknown": "Sconosciuto",
+  "label_language": "Lingua",
+  "label_keypoints": "Punti chiave",
+  "label_transcript": "Trascrizione in diretta",
+  "speaker_default": "Speaker",
+  "no_text_available": "Nessun testo disponibile.",
+  "alert_warning": "Attenzione",
+  "alert_duration_mismatch": "L'ora non corrisponde, ma l'analisi continua.",
+  "alert_file_relinked": "File ripristinato!",
+  "alert_delete_confirm": "Vuoi davvero eliminare l'analisi?",
+  "cancel": "Annulla",
+  "delete": "Elimina"
 }
