--- a/DiarizeAI-Mobil/src/services/locales/ja.json
+++ b/DiarizeAI-Mobil/src/services/locales/ja.json
@@ -61,5 +61,30 @@
   "topic_hint": "注目のキーワード（例：試験）",
   "topic_placeholder": "例：期末試験、プロジェクト...",
   "original": "オリジナル",
-  "Summarized": "要約"
+  "Summarized": "要約",
+
+  "hide_highlights": "ハイライトを非表示",
+  "show_highlights": "ハイライトを表示",
+  "analysis_karaoke_title": "分析とカラオケ",
+  "data_not_found": "データが見つかりません。",
+  "go_back": "戻る",
+  "audio_mode_earpiece": "イヤピースモード",
+  "audio_mode_speaker": "スピーカー",
+  "error_audio_missing": "音声ファイルが見つかりません。",
+  "btn_relink_file": "ファイルを再読み込み",
+  "label_summary": "概要",
+  "no_summary_available": "概要が見つかりません。",
+  "label_type": "タイプ",
+  "unknown": "不明",
+  "label_language": "言語",
+  "label_keypoints": "キーポイント",
+  "label_transcript": "ライブトランスクリプト",
+  "speaker_default": "Speaker",
+  "no_text_available": "テキストがありません。",
+  "alert_warning": "警告",
+  "alert_duration_mismatch": "時間が一致していませんが、まだ継続しています。",
+  "alert_file_relinked": "ファイルが復元されました！",
+  "alert_delete_confirm": "分析を削除してもよろしいですか？",
+  "cancel": "キャンセル",
+  "delete": "削除"
 }
