--- a/DiarizeAI-Mobil/src/services/locales/ko.json
+++ b/DiarizeAI-Mobil/src/services/locales/ko.json
@@ -61,5 +61,30 @@
   "topic_hint": "초점 키워드 (예: 시험)",
   "topic_placeholder": "예: 기말고사, 프로젝트...",
   "original": "원본",
-  "Summarized": "요약됨"
+  "Summarized": "요약됨",
+
+  "hide_highlights": "하이라이트 숨기기",
+  "show_highlights": "하이라이트 표시",
+  "analysis_karaoke_title": "분석 및 노래방",
+  "data_not_found": "데이터를 찾을 수 없습니다.",
+  "go_back": "뒤로 가기",
+  "audio_mode_earpiece": "이어폰 모드",
+  "audio_mode_speaker": "스피커",
+  "error_audio_missing": "오디오 파일을 찾을 수 없습니다.",
+  "btn_relink_file": "파일 다시 로드",
+  "label_summary": "요약",
+  "no_summary_available": "요약을 찾을 수 없습니다.",
+  "label_type": "유형",
+  "unknown": "알 수 없음",
+  "label_language": "언어",
+  "label_keypoints": "핵심 요점",
+  "label_transcript": "실시간 녹취록",
+  "speaker_default": "발표자",
+  "no_text_available": "텍스트가 없습니다.",
+  "alert_warning": "경고",
+  "alert_duration_mismatch": "시간이 일치하지 않지만 계속 진행 중입니다.",
+  "alert_file_relinked": "파일이 복원되었습니다!",
+  "alert_delete_confirm": "분석을 삭제하시겠습니까?",
+  "cancel": "취소",
+  "delete": "삭제"
 }
