--- a/DiarizeAI-Mobil/src/services/locales/pl.json
+++ b/DiarizeAI-Mobil/src/services/locales/pl.json
@@ -61,5 +61,30 @@
   "topic_hint": "Słowa kluczowe (np. Egzamin)",
   "topic_placeholder": "np. Egzamin Końcowy, Projekt...",
   "original": "Oryginał",
-  "Summarized": "Podsumowane"
+  "Summarized": "Podsumowane",
+
+  "hide_highlights": "Ukryj wyróżnienia",
+  "show_highlights": "Pokaż wyróżnienia",
+  "analysis_karaoke_title": "Analiza i karaoke",
+  "data_not_found": "Nie znaleziono danych.",
+  "go_back": "Wróć",
+  "audio_mode_earpiece": "Tryb słuchawki",
+  "audio_mode_speaker": "Głośnik",
+  "error_audio_missing": "Nie znaleziono pliku audio",
+  "btn_relink_file": "Przeładuj plik",
+  "label_summary": "Podsumowanie",
+  "no_summary_available": "Nie znaleziono podsumowania.",
+  "label_type": "Typ",
+  "unknown": "Nieznany",
+  "label_language": "Język",
+  "label_keypoints": "Keypoints",
+  "label_transcript": "Transkrypcja na żywo",
+  "speaker_default": "Prelegent",
+  "no_text_available": "Brak dostępnego tekstu.",
+  "alert_warning": "Ostrzeżenie",
+  "alert_duration_mismatch": "Niezgodność czasu, ale nadal trwa.",
+  "alert_file_relinked": "Plik przywrócony!",
+  "alert_delete_confirm": "Czy na pewno chcesz usunąć analizę?",
+  "cancel": "Anuluj",
+  "delete": "Usuń"
 }
