--- a/DiarizeAI-Mobil/src/services/locales/pt.json
+++ b/DiarizeAI-Mobil/src/services/locales/pt.json
@@ -61,5 +61,30 @@
   "topic_hint": "Palavras-chave (ex: Exame)",
   "topic_placeholder": "ex: Exame Final, Projeto...",
   "original": "Original",
-  "Summarized": "Resumido"
+  "Summarized": "Resumido",
+  
+  "hide_highlights": "Ocultar destaques",
+  "show_highlights": "Mostrar destaques",
+  "analysis_karaoke_title": "Análise e Karaoke",
+  "data_not_found": "Dados não encontrados.",
+  "go_back": "Voltar",
+  "audio_mode_earpiece": "Modo auricular",
+  "audio_mode_speaker": "Coluna",
+  "error_audio_missing": "Ficheiro áudio não encontrado",
+  "btn_relink_file": "Recarregar ficheiro",
+  "label_summary": "Resumo",
+  "no_summary_available": "Resumo não encontrado.",
+  "label_type": "Tipo",
+  "unknown": "Desconhecido",
+  "label_language": "Língua",
+  "label_keypoints": "Pontos-chave",
+  "label_transcript": "Ao vivo Transcrição",
+  "speaker_default": "Orador",
+  "no_text_available": "Nenhum texto disponível.",
+  "alert_warning": "Aviso",
+  "alert_duration_mismatch": "Incompatibilidade de tempo, mas continua.",
+  "alert_file_relinked": "Ficheiro restaurado!",
+  "alert_delete_confirm": "Tem a certeza que pretende eliminar a análise?",
+  "cancel": "Cancelar",
+  "apagar": "Apagar"
 }
