--- a/DiarizeAI-Mobil/src/services/locales/ru.json
+++ b/DiarizeAI-Mobil/src/services/locales/ru.json
@@ -61,5 +61,30 @@
   "topic_hint": "Ключевые слова (например: Экзамен)",
   "topic_placeholder": "напр.: Финальный экзамен, Проект...",
   "original": "Оригинал",
-  "Summarized": "Резюмировано"
+  "Summarized": "Резюмировано",
+
+  "hide_highlights": "Скрыть основные моменты",
+  "show_highlights": "Показать основные моменты",
+  "analysis_karaoke_title": "Анализ и караоке",
+  "data_not_found": "Данные не найдены.",
+  "go_back": "Назад",
+  "audio_mode_earpiece": "Режим наушника",
+  "audio_mode_speaker": "Динамик",
+  "error_audio_missing": "Аудиофайл не найден",
+  "btn_relink_file": "Перезагрузить файл",
+  "label_summary": "Сводка",
+  "no_summary_available": "Сводка не найдена.",
+  "label_type": "Тип",
+  "unknown": "Неизвестно",
+  "label_language": "Язык",
+  "label_keypoints": "Ключевые моменты",
+  "label_transcript": "Живой эфир Транскрипт",
+  "speaker_default": "Диктор",
+  "no_text_available": "Текст недоступен.",
+  "alert_warning": "Предупреждение",
+  "alert_duration_mismatch": "Несоответствие времени, но работа продолжается.",
+  "alert_file_relinked": "Файл восстановлен!",
+  "alert_delete_confirm": "Вы уверены, что хотите удалить анализ?",
+  "cancel": "Отмена",
+  "delete": "Удалить"
 }
