--- a/DiarizeAI-Mobil/src/services/locales/zh.json
+++ b/DiarizeAI-Mobil/src/services/locales/zh.json
@@ -61,5 +61,30 @@
   "topic_hint": "关注的关键词（例如：考试）",
   "topic_placeholder": "例如：期末考试，项目...",
   "original": "原件",
-  "Summarized": "已总结"
+  "Summarized": "已总结",
+
+  "hide_highlights": "隐藏亮点",
+  "show_highlights": "显示亮点",
+  "analysis_karaoke_title": "分析与卡拉OK",
+  "data_not_found": "未找到数据。",
+  "go_back": "返回",
+  "audio_mode_earpiece": "耳麦模式",
+  "audio_mode_speaker": "扬声器",
+  "error_audio_missing": "未找到音频文件",
+  "btn_relink_file": "重新加载文件",
+  "label_summary": "摘要",
+  "no_summary_available": "未找到摘要。",
+  "label_type": "类型",
+  "unknown": "未知",
+  "label_language": "语言",
+  "label_keypoints": "关键点",
+  "label_transcript": "实时文字稿",
+  "speaker_default": "Speaker",
+  "no_text_available": "无可用文本。",
+  "alert_warning": "警告",
+  "alert_duration_mismatch": "时间不匹配，但仍在继续。",
+  "alert_file_relinked": "文件已恢复！",
+  "alert_delete_confirm": "确定要删除此分析吗？",
+  "cancel": "取消",
+  "delete": "删除"
 }
